--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="blueMeli">#0052F8</color>
     <color name="grey_medium">#676666</color>
     <color name="custom_black">#151515</color>
+    <color name="red">#F3453A</color>
 </resources>
