--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,13 +4,11 @@
         <item
             android:id="@+id/itHistorial"
             android:icon="@drawable/ic_clock"
-            android:title="Historial"/>
-    </group>
-    <group android:checkableBehavior="single">
+            android:title="Historial" />
         <item
-            android:id="@+id/itClearHistorialSee"
+            android:id="@+id/itClearHistorial"
             android:icon="@drawable/ic_delete_historial"
             android:title="Borrar historial" />
     </group>
-
 </menu>
+
